JgMaschineServiceArbeitszeit/Datafox_SDK_Windows_04.03.09/Kommunikationsmodul DFComDLL 04.03.09/DLL/DFComSLink.h

// ########################################################
/** 
 * @brief Setzen einer Rueckruffunktion.
 *
 * Die Rueckruffunktion wird waehrend des Kommunikationsablaufs fortwaehrend 
 * aufgerufen und bietet die Moeglichkeit eines fruehzeitigen abbruches des selbigen.
 *
 * @param iChannelNum Kommunikationskanalnummer.
 * @param CBFunction Zeiger auf die Rueckruffunktion oder 0 fuer abschalten.
 *
 * @return Keine.
 *
 * @version Ab DLL - Version 02.00.00 enthalten.
 */
EXTERN_DECL void __stdcall DFCSetCallBack(int iChannelNum, int (*CBFunction)(void));
// ########################################################
/** 
 * @brief Tabellenbeschreibungen fuer Datensaetze aus Geraet lesen.
 *
 * Es wird versucht die Tabellenbeschreibungen aus dem Geraet zu lesen. Hiernach koennen   
 * mit den Funktionen DFCDatBCnt(), DFCDatBDatensatz() und DFCDatBFeld() auf den 
 * ermittelten Daten gearbeitet werden.
 *
 * @param iChannelNum Kommunikationskanalnummer.
 * @param iBusNum Busnummer des anzusprechenden Geraetes.
 * @param *piError Zeiger auf Variable die nach Fehler den Fehlercode erhaelt.
 *
 * @return Ergebnis der Ausfuehrung.
 * @retval 0 Funktion konnte nicht ausgefuehrt werden.
 * @retval 1 Funktion wurde erfolgreich ausgefuehrt.
 *
 * @version Ab DLL - Version 1.1.i enthalten.
 */
EXTERN_DECL int __stdcall DFCLoadDatensatzbeschreibung(int iChannelNum, int iBusNum, int *piError);
// ########################################################
/** 
 * @brief Anzahl der Tabellenbeschreibungen fuer Datensaetze ermitteln.
 *
 * Auf Grundlage der zuvor mit DFCLoadDatensatzbeschreibung() gelesenen Daten, wird 
 * die Anzahl der definierten Tabellen zurueckgegeben.
 *
 * @param iChannelNum Kommunikationskanalnummer.
 *
 * @return Anzahl der mit DFCLoadDatensatzbeschreibung() gelesenen Tabellendefinitionen.
 *
 * @version Ab DLL - Version 1.1.i enthalten.
 */
EXTERN_DECL int __stdcall DFCDatBCnt(int iChannelNum);
// ########################################################
/** 
 * @brief Grunddaten einer Tabellenbeschreibungen fuer Datensaetze ermitteln.
 *
 * Auf Grundlage der zuvor mit DFCLoadDatensatzbeschreibung() gelesenen Daten, werden 
 * die Grunddaten zu einer Tabellen zurueckgegeben.
 *
 * @param iChannelNum Kommunikationskanalnummer.
 * @param iDataNum Tabellennummer im Bereich von (0 - (DFCDatBCnt() - 1)).
 * @param *szName Zeiger auf Speicherbereich fuer Tabellenname. (Mindestens 17 Zeichen).
 * @param *piFieldCount Zeiger auf Variable, welche die Feldanzahl der Tabelle erhaelt.
 *
 * @return Ergebnis der Ausfuehrung.
 * @retval 0 Funktion konnte nicht ausgefuehrt werden. (Tabelle nicht definiert!)
 * @retval 1 Funktion wurde erfolgreich ausgefuehrt.
 *
 * @version Ab DLL - Version 1.1.i enthalten.
 */
EXTERN_DECL int __stdcall DFCDatBDatensatz(int iChannelNum, int iDataNum, unsigned char *szName, int *piFieldCount);
// ########################################################
/** 
 * @brief Grunddaten eines Tabellenfeldes fuer Datensaetze ermitteln.
 *
 * Auf Grundlage der zuvor mit DFCLoadDatensatzbeschreibung() gelesenen Daten, werden 
 * die Grunddaten zu einem Tabellenfeld zurueckgegeben.
 *
 * @param iChannelNum Kommunikationskanalnummer.
 * @param iDataNum Tabellennummer im Bereich von (0 - (DFCDatBCnt() - 1)).
 * @param iField Feldnummer.
 * @param *szName Zeiger auf Speicherbereich fuer Feldname. (Mindestens 17 Zeichen).
 * @param *piType Zeiger auf Variable, welche den Feldtyp erhaelt.
 * @param *piLength Zeiger auf Variable, welche die definierte Laenge des Feldes erhaelt,
 *                 in dieser ist auch das Nullterminierungszeichen enthalten.
 *
 * @return Ergebnis der Ausfuehrung.
 * @retval 0 Funktion konnte nicht ausgefuehrt werden. (Tabelle nicht definiert!)
 * @retval 1 Funktion wurde erfolgreich ausgefuehrt.
 *
 * @version Ab DLL - Version 1.1.i enthalten.
 */
EXTERN_DECL int __stdcall DFCDatBFeld(int iChannelNum, int iDataNum, int iField, unsigned char *szName, int *piType, int *piLength);
// ########################################################
/** 
 * @brief Tabellenbeschreibungen fuer Listen aus Geraet lesen.
 *
 * Es wird versucht die Tabellenbeschreibungen aus dem Geraet zu lesen. Hiernach koennen   
 * mit den Funktionen DFCListBCnt(), DFCListBDatensatz() und DFCListBFeld() auf den ermittelten 
 * Daten gearbeitet werden.
 *
 * @param iChannelNum Kommunikationskanalnummer.
 * @param iBusNum Busnummer des anzusprechenden Geraetes.
 * @param *piError Zeiger auf Variable die nach Fehler den Fehlercode erhaelt.
 *
 * @return Ergebnis der Ausfuehrung.
 * @retval 0 Funktion konnte nicht ausgefuehrt werden.
 * @retval 1 Funktion wurde erfolgreich ausgefuehrt.
 *
 * @version Ab DLL - Version 1.1.i enthalten.
 */
EXTERN_DECL int __stdcall DFCLoadListenbeschreibung(int iChannelNum, int iBusNum, int *piError);
// ########################################################
/** 
 * @brief Anzahl der Tabellenbeschreibungen fuer Listen ermitteln.
 *
 * Auf Grundlage der zuvor mit DFCLoadListenbeschreibung() gelesenen Daten, wird 
 * die Anzahl der definierten Tabellen zurueckgegeben.
 *
 * @param iChannelNum Kommunikationskanalnummer.
 *
 * @return Anzahl der mit DFCLoadListenbeschreibung() gelesenen Tabellendefinitionen.
 *
 * @version Ab DLL - Version 1.1.i enthalten.
 */
EXTERN_DECL int __stdcall DFCListBCnt(int iChannelNum);
// ########################################################
/** 
 * @brief Grunddaten einer Tabellenbeschreibungen fuer Listen ermitteln.
 *
 * Auf Grundlage der zuvor mit DFCLoadListenbeschreibung() gelesenen Daten, werden 
 * die Grunddaten zu einer Tabellen zurueckgegeben.
 *
 * @param iChannelNum Kommunikationskanalnummer.
 * @param iDataNum Tabellennummer im Bereich von (0 - (DFCListBCnt() - 1)).
 * @param *szName Zeiger auf Speicherbereich fuer Tabellenname. (Mindestens 17 Zeichen).
 * @param *piFieldCount Zeiger auf Variable, welche die Feldanzahl der Tabelle erhaelt.
 * @param *piVar Zeiger auf Variable, welche immer eine 0 erhaelt. (Kompatible zu Timeboy)
 *
 * @return Ergebnis der Ausfuehrung.
 * @retval 0 Funktion konnte nicht ausgefuehrt werden. (Tabelle nicht definiert!)
 * @retval 1 Funktion wurde erfolgreich ausgefuehrt.
 *
 * @version Ab DLL - Version 1.1.i enthalten.
 */
EXTERN_DECL int __stdcall DFCListBDatensatz(int iChannelNum, int iDataNum, unsigned char *szName, int *piFieldCount, int *piVar);
// ########################################################
/** 
 * @brief Grunddaten eines Tabellenfeldes fuer Listen ermitteln.
 *
 * Auf Grundlage der zuvor mit DFCLoadListenbeschreibung() gelesenen Daten, werden 
 * die Grunddaten zu einem Tabellenfeld zurueckgegeben.
 *
 * @param iChannelNum Kommunikationskanalnummer.
 * @param iDataNum Tabellennummer im Bereich von (0 - (DFCListBCnt() - 1)).
 * @param iField Feldnummer.
 * @param *szName Zeiger auf Speicherbereich fuer Feldname. (Mindestens 17 Zeichen).
 * @param *piType Zeiger auf Variable, welche den Feldtyp erhaelt.
 * @param *piLength Zeiger auf Variable, welche die definierte Laenge des Feldes erhaelt,
 *                 in dieser ist auch das Nullterminierungszeichen enthalten.
 *
 * @return Ergebnis der Ausfuehrung.
 * @retval 0 Funktion konnte nicht ausgefuehrt werden. (Tabelle nicht definiert!)
 * @retval 1 Funktion wurde erfolgreich ausgefuehrt.
 *
 * @version Ab DLL - Version 1.1.i enthalten.
 */
EXTERN_DECL int __stdcall DFCListBFeld(int iChannelNum, int iDataNum, int iField, unsigned char *szName, int *piType, int *piLength);
// ########################################################
/**
 * @brief Anfügen eines Fingertemplates 
 *        an die Datentabelle des Fingerprints.
 *
 * @param channelID Der zu verwendende Kanal.
 * @param deviceID Die zu verwendende Busnummer.
 * @param type Templatetype der übergeben wird.
 * @param *fingertemplate Zeiger auf die Templatedaten.
 * @param size Die Länge des Buffers auf den der Zeiger *fingertemplate verweist.
 * @param *piError Zeiger auf Variable die nach Fehler den Fehlercode erhaelt.
 *
 * @return Ergebnis der Ausfuehrung.
 * @retval 0 Funktion konnte nicht ausgefuehrt werden.
 * @retval 1 Funktion wurde erfolgreich ausgefuehrt.
 *
 * @version Ab DLL - Version 04.01.04 enthalten.
 */
EXTERN_DECL int __stdcall DFCFingerprintAppendRecord(int channelID, int deviceID, int type, unsigned char *fingertemplate, int size, int *piError);
// ########################################################
/**
 * @brief Lesen eines Fingertemplates
 *
 * Über die eindeutige Kombination aus PID/FID können mit dieser Funktion die 
 * entsprechenden Templatedaten ermittelt werden.
 *
 * @param channelID Der zu verwendende Kanal.
 * @param deviceID Die zu verwendende Busnummer.
 * @param type Templatetype der übergeben wird.
 * @param pid Personal ID des Templates.
 * @param fid Finger ID des Templates.
 * @param *fingertemplate Zeiger auf die Templatedaten.
 * @param *size Als Eingabe die Länge des Buffers auf den der 
 *              Zeiger *template verweist, als Ausgabe die übergebene Anzahl Zeichen.
 * @param *piError Zeiger auf Variable die nach Fehler den Fehlercode erhaelt.
 *
 * @return Ergebnis der Ausfuehrung.
 * @retval 0 Funktion konnte nicht ausgefuehrt werden.
 * @retval 1 Funktion wurde erfolgreich ausgefuehrt.
 *
 * @version Ab DLL - Version 04.01.04 enthalten.
 */
EXTERN_DECL int __stdcall DFCFingerprintGetRecord(int channelID, int deviceID, int type, int pid, int fid, unsigned char *fingertemplate,int *size, int *piError);
 

// ########################################################
/**
 * @brief Löschen von Fingertemplates
 *
 * Sie können einzelne Templates durch Angabe des entsprechenden pid,fid Pärchens löschen. 
 * Es ist auch möglich durch Angabe einer pid und einer fid = 0, alle Fingertemplates zu dieser pid zu löschen. 
 * Wird eine pid = 0 und fid = 0 angegeben, werden alle Fingertemplates gelöscht.
 *
 * @param channelID Der zu verwendende Kanal.
 * @param deviceID Die zu verwendende Busnummer.
 * @param pid Personal ID des Templates.
 * @param fid Finger ID des Templates.
 * @param *piError Zeiger auf Variable die nach Fehler den Fehlercode erhaelt.
 *
 * @return Ergebnis der Ausfuehrung.
 * @retval 0 Funktion konnte nicht ausgefuehrt werden.
 * @retval 1 Funktion wurde erfolgreich ausgefuehrt.
 *
 * @version Ab DLL - Version 04.01.04 enthalten.
 */
EXTERN_DECL int __stdcall DFCFingerprintDeleteRecord(int channelID, int deviceID, int pid, int fid, int *piError);
EXTERN_DECL int __stdcall DFCFingerprintList(int channelID, int deviceID, int flags, int *piError);
EXTERN_DECL int __stdcall DFCFingerprintBackup(int channelID, int deviceID, char *backupFile, int flags, int *piError);
EXTERN_DECL int __stdcall DFCFingerprintRestore(int channelID, int deviceID, char *backupFile, int flags, int *piError);
// ########################################################
/** 
 * @brief Setzen des Listenbuffers fuer eine Timeboyliste.
 *
 * Die Listen werden intern kopiert.
 *
 * @param iChannelNum Kommunikationskanalnummer.
 * @param iGroupID Gruppennummer der Liste
 * @param iListNum Listennummer.
 * @param iLineCount Anzahl der Zeilen, Datensaetze im Block.
 * @param iListSize Anzahl Byte im Block. Brechnet sich aus (Anzahl Datensaetzte * Datensatzlaenge).
 * @param *pucBuf Zeiger auf Bytearray, welches die Daten enthaelt.
 * @param flags Angebbare Flags zur Liste. Z.B. Bit 1 ob Liste geloescht werden soll.
 * @param *piError Zeiger auf Variable die nach Fehler den Fehlercode erhaelt.
 *
 * @return Ergebnis der Ausfuehrung.
 * @retval 0 Funktion konnte nicht ausgefuehrt werden.
 * @retval 1 Funktion wurde erfolgreich ausgefuehrt.
 *
 * @version Ab DLL - Version 04.01.04 enthalten.
 */
EXTERN_DECL int __stdcall DFCMakeTimeboyList(int iChannelNum, int iGroupID, int iListNum, int iLineCount, int iListSize, unsigned char *pucBuf, int flags, int *piError);
// ########################################################
/**
 * @brief Uebertragen der Listendaten zum Geraet.
 *
 * Es wird versucht, die zuvor mit DFCMakeTimeboyList() importierten Listendaten in 
 * das Geraet zu uebertragen.
 *
 * @param iChannelNum Kommunikationskanalnummer.
 * @param iBusNum Busnummer des anzusprechenden Geraetes.
 * @param iGroupID Gruppennummer der Liste. (-1 bedeutet alle Gruppen)
 * @param iListNum Listennummer der zu uebertragenden Liste. (-1 uebertraegt alle importierten)
 * @param *piError Zeiger auf Variable die nach Fehler den Fehlercode erhaelt.
 *
 * @return Ergebnis der Ausfuehrung.
 * @retval 0 Funktion konnte nicht ausgefuehrt werden.
 * @retval 1 Funktion wurde erfolgreich ausgefuehrt.
 *
 * @version Ab DLL - Version 04.01.04 enthalten.
 */
EXTERN_DECL int __stdcall DFCLoadTimeboyList(int iChannelNum, int iBusNum, int iGroupID, int iListNum, int reserve, int *piError);
// ########################################################
/** 
 * @brief Buffer fuer Timeboylisten loeschen.
 *
 * Loescht in der DLL den Buffer fuer Timeboylisten.
 *
 * @param iChannelNum Kommunikationskanalnummer.
 * @param iGroupID Gruppennummer der Liste.
 * @param iListNum Listennummer (0 - 19). Bei Angabe von -1 werden alle geloescht.
 *
 * @return Keine.
 *
 * @version Ab DLL - Version 04.01.04 enthalten.
 */
EXTERN_DECL void __stdcall DFCClearTimeboyListBuffer(int iChannelNum, int iGroupID, int iListNum);
EXTERN_DECL int __stdcall DFCStartActiveConnection(char *ip, int port, int deviceID, int timeout, int aliveTO, int maxConnections, int infoFlags, int reserved, int *piError);
EXTERN_DECL int __stdcall DFCStopActiveConnection(int *piError);
EXTERN_DECL int __stdcall DFCGetFirstActiveChannelID();
EXTERN_DECL int __stdcall DFCGetNextActiveChannelID(int prev);
EXTERN_DECL int __stdcall DFCGetInfoActiveChannel(int channelID, char *infoString, int *infoStringLength);
EXTERN_DECL int __stdcall DFCSetRecordAvailable(int enable);
EXTERN_DECL int __stdcall DFCRecordAvailable(int *channelID, int *deviceID, char *infoString, int *infoStringLength, int *error);
EXTERN_DECL int __stdcall DFCBindDeviceToChannel(int channelID, int deviceType, int deviceSerial, char *deviceIp, int *piError);