JgMaschineServiceArbeitszeit/DatafoxDll.cs


    [DllImport("DFComDLL.dll")]
    public static extern int DFCFingerprintAppendRecord(int channelID, int deviceID, int type, byte[] fingertemplate, int size, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCFingerprintGetRecord(int channelID, int deviceID, int type, int pid, int fid, [MarshalAs(UnmanagedType.LPArray)] byte[] fingertemplate, out int size, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCFingerprintDeleteRecord(int channelID, int deviceID, int pid, int fid, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCFingerprintList(int channelID, int deviceID, int flags, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCFingerprintBackup(int channelID, int deviceID, string backupFile, int flags, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCFingerprintRestore(int channelID, int deviceID, string backupFile, int flags, out int errorID);


    // ########################################################
    // ########### FUNKTIONEN FUER TIMEBOYLISTEN  #############
    // ########################################################


    [DllImport("DFComDLL.dll")]
    public static extern int DFCMakeTimeboyList(int channelID, int iGroupID, int iListNum, int iLineCount, int iListSize, byte[] pucBuf, int flags, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCLoadTimeboyList(int channelID, int deviceID, int iGroupID, int iListNum, int reserve, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern void DFCClearTimeboyListBuffer(int channelID, int iGroupID, int iListNum);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCStartActiveConnection(string ip, int port, int deviceID, int timeout, int aliveTO, int maxConnections, int infoFlags, int reserved, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCStopActiveConnection(out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetFirstActiveChannelID();

    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetNextActiveChannelID(int prev);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetInfoActiveChannel(int channelID, StringBuilder infoString, out int infoStringLength);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCSetRecordAvailable(int enable);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCRecordAvailable(out int channelID, out int deviceID, StringBuilder infoString, out int infoStringLength, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCBindDeviceToChannel(int channelID, int deviceType, int deviceSerial, string deviceIp, out int errorID);

    /// <summary>
    /// Definition einer Tabelle (Datensatz- oder Listenbeschreibung)
    /// </summary>
    public class DFTable
    {
      public DFTable()
      {
        // Gesamtgröße des Datensatzes
        _length = -1;
      }
      string _name;
      public string Name
      {
        get { return _name; }
        set { _name = value; }
      }
      DFTableField[] _fields;
      public DFTableField[] Fields
      {
        get { return _fields; }
        set { _fields = value; }
      }
      int _length;
      public int Length
      {
        get
        {
          // Gesamtgroesse bereits ermittelt?
          if (_length == -1 && Fields != null)
          {
            _length = 0;
            int num;
            for (num = 0; num < Fields.Length; num++)
            {
              _length += Fields[num].Length;
            }
          }

          return _length;
        }
      }
    }
    /// <summary>
    /// Definition eines Tabellenfeldes (Datensatz- oder Listenbeschreibung)
    /// </summary>
    public class DFTableField
    {
      public DFTableField()
      {

      }
      string _name;
      public string Name
      {
        get { return _name; }
        set { _name = value; }
      }
      int _type;
      public int Type
      {
        get { return _type; }
        set { _type = value; }
      }
      int _length;
      public int Length
      {
        get { return _length; }
        set { _length = value; }
      }
    }
    /// <summary>
    /// Laden aller Tabellenbeschreibungen. Stellt diese über die Tables Auflistung zur Verfügung.
    /// </summary>
    public class TableDeclarations
    {
      // Handelt es sich um Tabellendefinitionen für Datensätze, Listen der Bedienung oder Zutrittskontrolle
      public enum TableType { Record, List, ListZK2 };
      TableType _type;
      string _fileNameSerialize;
      public TableDeclarations(TableType type, string fileNameSerialize)
      {
        _type = type;
        _fileNameSerialize = fileNameSerialize;
      }
      int _channelID;
      int _deviceID;
      int _errorID;
      public int ErrorID
      {
        get { return _errorID; }
        set { _errorID = value; }
      }
      string _filePath;
      int _baseIndex;
      DFTable[] _tables;
      //TableDeclarationsSerializer _serializer;
      public DFTable[] Tables
      {
        get { return _tables; }
      }

      public bool LoadFromDevice(int channelID, int deviceID, string filePath)
      {
        int idx, count;
        _channelID = channelID;
        _deviceID = deviceID;
        _filePath = filePath;
        _baseIndex = 0;
        _tables = null;
        ErrorID = 0;

        if (_type == TableType.Record)
        {
          // Laden der Listenbeschreibungen
          if (DFComDLL.DFCLoadDatensatzbeschreibung(_channelID, _deviceID, out _errorID) == 0)
          {
            return false;
          }

          count = DFComDLL.DFCDatBCnt(_channelID);
          if (count == 0)
          {
            return true;
          }

        }
        else if (_type == TableType.List)
        {
          // Listenbeschreibungen des Setups müssen geladen werden, sind nicht ZK2-Listen

          // Laden der Listenbeschreibungen
          if (DFComDLL.DFCLoadListenbeschreibung(_channelID, _deviceID, out _errorID) == 0)
          {
            return false;
          }

          count = DFComDLL.DFCListBCnt(_channelID);
          if (count == 0)
          {
            return true;
          }

        }
        else if (_type == TableType.ListZK2)
        {
          count = 7;

          // Basisindex setzen
          _baseIndex = 200;
        }
        else
        {
          // Listentype liegt außerhalb des unterstützten Bereichs.
          throw new Exception("Tabellentyp liegt außerhalb des unterstützten Bereiches.");
        }

        // Listenbeschreibungen aus DLL importieren
        _tables = new DFTable[count];
        for (idx = 0; idx < Tables.Length; idx++)
        {
          Tables[idx] = new DFTable();
        }
        int idxTable, idxField, fieldCount = 0, type = 0, var;
        StringBuilder name = new StringBuilder(20);
        int length = 0;
        for (idxTable = 0; idxTable < count; idxTable++)
        {
          // Listendefinition lesen
          if (((_type == TableType.List || _type == TableType.ListZK2) && DFComDLL.DFCListBDatensatz(_channelID, _baseIndex + idxTable, name, out fieldCount, out var) == 0) ||
              (_type == TableType.Record && DFComDLL.DFCDatBDatensatz(_channelID, _baseIndex + idxTable, name, out fieldCount) == 0))
          {
            throw new Exception("Funktion zur Verarbeitung der Tabellenbeschreibungen (DFCListBDatensatz, DFCDatBDatensatz) schlug fehl.");
          }

          Tables[idxTable].Name = name.ToString();
          Tables[idxTable].Fields = new DFTableField[fieldCount];
          for (idx = 0; idx < Tables[idxTable].Fields.Length; idx++)
          {
            Tables[idxTable].Fields[idx] = new DFTableField();
          }
          for (idxField = 0; idxField < fieldCount; idxField++)
          {
            if (((_type == TableType.List || _type == TableType.ListZK2) && DFComDLL.DFCListBFeld(_channelID, _baseIndex + idxTable, idxField, name, out type, out length) == 0) ||
                (_type == TableType.Record && DFComDLL.DFCDatBFeld(_channelID, _baseIndex + idxTable, idxField, name, out type, out length) == 0))
            {
              throw new Exception("Funktion zur Verarbeitung der Tabellenbeschreibungen (DFCListBFeld, DFCDatBFeld) schlug fehl.");
            }
            Tables[idxTable].Fields[idxField].Name = name.ToString();
            Tables[idxTable].Fields[idxField].Type = type;
            Tables[idxTable].Fields[idxField].Length = length;
          }
        }

        return true;
      }
    }
    /// <summary>
    /// Aktuelle Tabellenbeschreibungen in Datei Serialisieren.
    /// </summary>
    public class TableDeclarationsSerializer : XmlSerializer
    {
      public TableDeclarationsSerializer(string fileName)
          : base(typeof(DFTable[]))
      {
        _fileName = fileName;
      }
      string _fileName;
      public void Serialize(DFTable[] data)
      {
        XmlWriterSettings settings = new XmlWriterSettings();
        settings.Indent = true;
        XmlWriter writer = XmlWriter.Create(_fileName, settings);
        base.Serialize(writer, data);
        writer.Close();
      }

      public DFTable[] Deserialize()
      {
        DFTable[] _data;
        try
        {
          XmlReader reader = XmlReader.Create(_fileName);
          _data = (DFTable[])base.Deserialize(reader);
          reader.Close();
        }
        //catch (System.Exception ex)
        catch
        {
          _data = new DFTable[0];
        }

        return _data;
      }
    }
    /// <summary>
    /// Ausnahme beim Import von Listendaten.
    /// </summary>
    public class ListImportException : Exception
    {
      public ListImportException(string fileName, int line, int column, string msg)
          : base(string.Format("Fehler bei Import der Daten aus Datei [{0}]\r\nIn Zeile {1}{2}: {3}", fileName, line, (column != 0) ? string.Format(", Spalte {0}", column) : "", msg))
      {
        this.Line = line;
        this.Column = column;
      }
      string _fileName;
      public string FileName
      {
        get { return _fileName; }
        set { _fileName = value; }
      }
      int _line;
      public int Line
      {
        get { return _line; }
        set { _line = value; }
      }
      int _column;
      public int Column
      {
        get { return _column; }
        set { _column = value; }
      }
    }
    /// <summary>
    /// Import einer Textdatei als Listendaten.
    /// </summary>
    public class ListImport
    {
      public ListImport()
      {
        // Member initialisieren
        _recordCount = 0;
        _recordSize = 0;
      }

      /// <summary>
      /// Speicherarray der importierten Listendaten.
      /// </summary>
      byte[] _mem;
      public byte[] Mem
      {
        get { return _mem; }
      }
      /// <summary>
      /// Anzahl der importierten Datensätze.
      /// </summary>
      int _recordCount;
      public int RecordCount
      {
        get { return _recordCount; }
      }
      /// <summary>
      /// Länge eines importierten Datensatzes.
      /// </summary>
      int _recordSize;
      public int RecordSize
      {
        get { return _recordSize; }
      }
      /// <summary>
      /// Gesamtlänge der aktuell importierten Listendaten.
      /// </summary>
      public int Size
      {
        get { return RecordCount * RecordSize; }
      }

      public bool Import(DFTable table, string fileName)
      {
        int lineNum = 0, columnNum, idx;
        string textLine;
        string[] tokens;
        Encoding ascii = Encoding.ASCII;
        StreamReader reader = new StreamReader(fileName);
        MemoryStream list = new MemoryStream();

        _recordCount = 0;
        _recordSize = 0;
